Users can edit models! (merged)   - users can edit the name and description   - duplicate detection for model id's and property id's   - duplicate properties/models appear in red.   - input fields with duplicates show the user a helpful error message on hover   - duplicate properties/models appear exact way the user typed but treated uniquely internally   - duplicate properties/models export correctly with unique names   - required property list updates when a required property is renamed   - required property list is correctly ignored or handled for duplicates   - renaming a duplicate to something else will rename the required property list only if it was tied to the original property, not the one adding a conflict   - duplicate property becomes valid automatically if the original property is renamed   - properties are sorted by the order in the JSON file using the orderByObject filter, which also helps make sure properties don't jump around   - blank model and property names are temporarily allowed but don't cause trouble

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -37,6 +37,9 @@ h2 {
     padding: 0;
 
     li {
+      .error {
+        background-color: pink;
+      }
     }
   }
 }
@@ -47,31 +50,32 @@ h2 {
   position: absolute;
 }
 
+.heading {
+  border: 1px solid black;
+  cursor: pointer;
+  font-size: 16px;
+  margin-top: 10px;
+  padding: 3px 5px;
+
+  &.error {
+    background-color: lightpink;
+  }
+
+  .method {
+    display: inline-block;
+    font-size: 11px;
+    min-width: 40px;
+  }
+
+  .name {
+    display: inline-block;
+    width: 150px;
+  }
+}
+
 ul.apis {
 
   li {
-    .heading {
-      border: 1px solid black;
-      cursor: pointer;
-      font-size: 16px;
-      margin-top: 10px;
-      padding: 3px 5px;
-
-      &.error {
-        background-color: lightpink;
-      }
-
-      .method {
-        display: inline-block;
-        font-size: 11px;
-        min-width: 40px;
-      }
-
-      .path {
-        display: inline-block;
-        width: 150px;
-      }
-    }
 
     ul.operations {
       li {
@@ -114,6 +118,7 @@ ul.apis {
     }
   }
 }
+
 
 /* xeditable */
 
